# tcgr

./: CMakeLists.txt  Dockerfile  main.cpp
Client/: client.cpp
Docs/: Protocal.md
Game/: GameServer.cpp  GameServer.h  MatchQueue.cpp  MatchQueue.h  Player.cpp  Player.h  Room.cpp  Room.h
Net/: ServerIO.cpp  ServerIO.h  Session.h  TcpServer.cpp  TcpServer.h  header.h
Tools/: Logger.cpp  Logger.h  ObjectPool.cpp  ObjectPool.h  Poolable.cpp  Poolable.h  TaskPool.h  Thread.h  ThreadPool.cpp  ThreadPool.h
unitest/: unitest_logger.cpp  unitest_threads.cpp
